--- a/css/style.css
+++ b/css/style.css
@@ -25,10 +25,10 @@ body{
 }
 
 .shadowBottom{
-	box-shadow: 0px 5px 10px rgba(86,83,86,0.6);
-	-moz-box-shadow: 0px 5px 10px rgba(86,83,86,0.6);
-	-webkit-box-shadow: 0px 5px 10px rgba(86,83,86,0.6);
-	-ms-box-shadow: 0px 5px 10px rgba(86,83,86,0.6);
+	-webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	-ms-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	-moz-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 .navMain{
@@ -105,6 +105,14 @@ img.bolinhasH{
 	margin: 0 auto;
 }
 
+img.imgContent{
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	width: 50%;
+	margin: 0 auto 50px auto;
+	min-width: 250px;
+	max-width: 400px;
+}
+
 .textContent a{
 	color: #077cee;
 }
@@ -161,6 +169,9 @@ span{
 
 .atracao img{
 	width: 100%;
+	-webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	margin-bottom: 10px;
 }
 
 
