--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,13 @@ span{
 
 }
 
+iframe#mapa-oquefazeremsantos {
+	width: 90%;
+	margin: 0 auto 40px auto;
+}
+
 .atracao{
+	font-size: 16px;
 	width: 30%;
 	min-width: 200px;
 	max-width: 300px;
@@ -171,6 +177,8 @@ span{
 	width: 100%;
 	-webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	-ms-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	-moz-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 	margin-bottom: 10px;
 }
 
@@ -231,13 +239,15 @@ a.voltar_buton{
 .layerContent img{
 	clear: both;
 	width: 90%;
+	max-width: 600px;
 	margin: 5% 0 0 0;
-	border-bottom: 3px solid #cb9931;
-
+	-webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	-ms-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	-moz-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 .layerCaption{
-	color: #cb9931;
 	margin: 10px 0 30px 0;
 
 }
@@ -247,57 +257,55 @@ a.voltar_buton{
 }
 
 
+.galeriaPresentes {
+	width: 90%;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
 
-.slider{
-	margin: 60px 0;
 }
 
+.presente{
+	cursor: pointer;
+	font-size: 16px;
+	width: 30%;
+	min-width: 200px;
+	max-width: 300px;
+	text-align: left;	
+}
 
-.galeriaFotos img{
+.presente span {
+	color: #6D6A6D;
+}
+
+.presente:hover span {
+	color: #cb9931;
+/*	font-weight: bold;
+*/}
+
+.presente img{
 	width: 100%;
-	filter: grayscale(1);
-	-moz-filter: grayscale(1);
-	-webkit-filter: grayscale(1);
-	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
-
-	border-bottom: 3px solid #cb9931;
+	margin-bottom: 10px;
+	-webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	-ms-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	-moz-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
-.galeriaFotos img:hover{
-	filter: none;
-	-moz-filter: grayscale(0);
-	-webkit-filter: grayscale(0);
+.presente:hover img{
+	width: 100%;
+	margin-bottom: 10px;
+	-webkit-box-shadow: 5px 5px 10px rgba(0,0,0,0.16), 0 3px 10px rgba(0,0,0,0.23);
+	box-shadow: 5px 5px 10px rgba(0,0,0,0.16), 0 3px 10px rgba(0,0,0,0.23);
+	-ms-box-shadow: 5px 5px 10px rgba(0,0,0,0.16), 0 3px 10px rgba(0,0,0,0.23);
+	-moz-box-shadow: 5px 5px 10px rgba(0,0,0,0.16), 0 3px 10px rgba(0,0,0,0.23);
 }
 
-
-.galeriaFotosEach{
-	float: left;
-	width: 32%;
-	margin-right: 1.5%;
-}
-
-.galeriaFotos.twoColumn{
-	width: 70%;
-	clear: both;
-	display: block;
-	margin: 30px auto;
-}
 
 .noMargin, a.noMargin, img.noMargin{
 	margin-right: 0;
 }
-
-
-
-/************** RSVP
-**************/
-.iframeForm{
-	width: 90%;
-	height: 800px;
-	margin: 0 auto;
-}
-
-
-
 
 
