--- a/css/style.css
+++ b/css/style.css
@@ -113,8 +113,20 @@ img.imgContent{
 	max-width: 400px;
 }
 
-.textContent a{
+.textContent a, .textContent a:visited, .textContent a:active{
 	color: #077cee;
+}
+
+.textContent a:hover{
+	color: #1044DA;
+}
+
+.atracao a, .atracao a:visited, .atracao a:active{
+	color: #077cee;
+}
+
+.atracao a:hover{
+	color: #1044DA;
 }
 
 .textContent b, b{
@@ -182,18 +194,37 @@ iframe#mapa-oquefazeremsantos {
 	margin-bottom: 10px;
 }
 
+.layerButtons{
+	display: flex;
+	-webkit-display: flex;
+	direction:row;
+	-webkit-flex-direction:row;
+	justify-content: center;
+	-webkit-justify-content: center;
+
+}
 
 
 a.button{
-	margin: 20px 0;
+	margin: 20px 10px;
 	color: #FFF;
-	background-color: #cb9931;
+	background-color: #6D6A6D;
 	font-weight: 400;
-	padding: 10px 20px;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
+	padding: 3px 10px;
+	-webkit-border-radius: 2px;
+	-moz-border-radius: 2px;
+	border-radius: 2px;
+	-webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	-ms-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	-moz-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
+
+a.button:hover{
+	background-color: #cb9931;
+}
+
+
 
 .layer{
 	display: none;
@@ -210,9 +241,12 @@ a.button{
 	height: 80%;
 	width: 60%;
 	margin: 30px auto;
-	padding: 5%;
+	padding: 3%;
 	background-color: #fff;
 	overflow: auto;
+	-webkit-border-radius: 2px;
+	-moz-border-radius: 2px;
+	border-radius: 2px;
 	-moz-box-shadow: 0px 0px 20px rgba(86,83,86,0.8);
 	-webkit-box-shadow: 0px 0px 20px rgba(86,83,86,0.8);
 	box-shadow: 0px 0px 20px rgba(86,83,86,0.8);
@@ -239,8 +273,8 @@ a.voltar_buton{
 .layerContent img{
 	clear: both;
 	width: 90%;
-	max-width: 600px;
-	margin: 5% 0 0 0;
+	max-width: 400px;
+	margin: 0 0 20px 0;
 	-webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 	-ms-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -256,6 +290,9 @@ a.voltar_buton{
 	font-weight: 700;
 }
 
+.hide {
+	display: none;
+}
 
 .galeriaPresentes {
 	width: 90%;
