--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,54 @@ a.button:hover{
 }
 
 
+#form-presentes{
+	height: 400px;
+	width: 300px;
+	margin: 20px auto 0 auto;
+	display: flex;
+	-webkit-display: flex;
+	direction:column;
+	-webkit-flex-direction:column;
+	justify-content: space-around;
+	-webkit-justify-content: space-around;
+	align-items: center;
+	-webkit-align-items: center;
+}
+
+input, textarea{
+	font-family: 'Josefin Sans', sans-serif;
+	color: #6D6A6D;
+	font-size: 16px;
+	line-height: 1.5;
+	text-align: left;
+	padding: 3px;
+	width: 290px;
+}
+
+
+input.button{
+	color: #FFF;
+	background-color: #6D6A6D;
+	font-weight: 400;
+	font-size: 18px;
+	padding: 3px 10px;
+	width: 160px;
+	text-align: center;
+	border: none;
+	-webkit-border-radius: 2px;
+	-moz-border-radius: 2px;
+	border-radius: 2px;
+	-webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	-ms-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	-moz-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+input.button:hover{
+	background-color: #cb9931;
+}
+
+
 
 .layer{
 	display: none;
