--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,17 @@ body{
 	padding: 7px 30px;
 	display: flex;
 	-webkit-display: flex;
+	-moz-display: flex;
+	-webkit-justify-content: space-around;
+	-ms-justify-content: space-around;
 	direction:row;
 	-webkit-flex-direction:row;
+	-moz-flex-direction:row;
+	-ms-flex-direction:row;
 	justify-content: space-around;
 	-webkit-justify-content: space-around;
+	-moz-justify-content: space-around;
+	-ms-justify-content: space-around;
 
 }
 
@@ -102,6 +109,7 @@ img.bolinhasH{
 .textContent{
 	clear: both;
 	width: 60%;
+	max-width: 700px;
 	margin: 0 auto;
 }
 
@@ -169,6 +177,22 @@ span{
 	flex-wrap: wrap;
 	justify-content: space-between;
 
+	-webkit-display: flex;
+	-webkit-flex-direction: row;
+	-webkit-flex-wrap: wrap;
+	-webkit-justify-content: space-between;
+
+	-moz-display: flex;
+	-moz-flex-direction: row;
+	-moz-flex-wrap: wrap;
+	-moz-justify-content: space-between;
+
+	-os-display: flex;
+	-os-flex-direction: row;
+	-os-flex-wrap: wrap;
+	-os-justify-content: space-between;
+
+
 }
 
 iframe#mapa-oquefazeremsantos {
@@ -196,11 +220,20 @@ iframe#mapa-oquefazeremsantos {
 
 .layerButtons{
 	display: flex;
-	-webkit-display: flex;
 	direction:row;
-	-webkit-flex-direction:row;
 	justify-content: center;
+
+	-webkit-display: flex;
+	-webkit-flex-direction:row;
 	-webkit-justify-content: center;
+
+	-moz-display: flex;
+	-moz-flex-direction:row;
+	-moz-justify-content: center;
+
+	-ms-display: flex;
+	-ms-flex-direction:row;
+	-ms-justify-content: center;
 
 }
 
@@ -229,14 +262,26 @@ a.button:hover{
 	height: 400px;
 	width: 300px;
 	margin: 20px auto 0 auto;
+
 	display: flex;
-	-webkit-display: flex;
-	direction:column;
-	-webkit-flex-direction:column;
+	flex-direction: column;
 	justify-content: space-around;
-	-webkit-justify-content: space-around;
 	align-items: center;
+
+	-webkit-display: flex;
+	-webkit-flex-direction: column;
+	-webkit-justify-content: space-around;
 	-webkit-align-items: center;
+
+	-moz-display: flex;
+	-moz-flex-direction: column;
+	-moz-justify-content: space-around;
+	-moz-align-items: center;
+
+	-ms-display: flex;
+	-ms-flex-direction: column;
+	-ms-justify-content: space-around;
+	-ms-align-items: center;
 }
 
 input, textarea{
@@ -286,8 +331,9 @@ input.button:hover{
 }
 
 .layerContent{
-	height: 80%;
-	width: 60%;
+/*	height: 80%;
+*/	width: 60%;
+	max-width: 500px;
 	margin: 30px auto;
 	padding: 3%;
 	background-color: #fff;
